tests/neg/i8032.scala
val x: 1 | 2 = 3 // error

val y = ???.map // error